# DirectXTex

./: CMakeLists.txt
